# vinny

./: .gitignore  .pylintrc  LICENSE  README.md  STT_Session.py  main.py  mypy.ini  process.py  pyproject.toml  run.py
chatgpt/: client.py  prompt.txt
core/: BaseClient.py  ChatGPTClient.py  MicrophoneStream.py  SIOClient.py  Session.py
frontend/: server.py
frontend/utils/: HTMLInterface.py
objects/: Client.py  SIO_Client.py  Session.py  Session_GVariant.py  Session_NVariant.py
server/: client.py  run_app.py  server.py
server/static/css/: basic.css
server/templates/: home.html  index.html
server/utils/: HTML_Interface.py
src/: __init__.py  models.py
src/blueprints/: index.py
src/core/: BaseClient.py  BaseServer.py  MicrophoneStream.py  SIOClient.py  SIOServer.py  Session.py  main.py
src/frontend/: HTMLInterface.py  server.py
src/frontend/templates/: index.html
src/templates/: index.html
stt/: easy.py  loudness.py  transcription.py
tests/: WordStream.py  test_session.py
